fix horizontal scroll bug

--- a/ui/src/pages/index.module.scss
+++ b/ui/src/pages/index.module.scss
@@ -2,7 +2,6 @@
 .main {
   position: relative;
   min-height: 100vh;
-  min-width: 100vw;
   background-color: $light-tan;
 }
 .body {
